Ajout de tous les autres fichiés modifiés et amélioration de la vue principale

--- a/app/src/main/res/layout/fragement_voir_billet.xml
+++ b/app/src/main/res/layout/fragement_voir_billet.xml
@@ -14,7 +14,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBillets"
         android:layout_width="match_parent"
-        android:layout_height="595dp">
+        android:layout_height="501dp"
+        android:background="#081018">
 
     </androidx.recyclerview.widget.RecyclerView>
 
