Ajout du swipe vers la droite pour supprimer les projets, ajouts des javadocs pour une bonne parties des classes et amélioration de la vue principale

--- a/app/src/main/res/layout/frag_principal.xml
+++ b/app/src/main/res/layout/frag_principal.xml
@@ -13,7 +13,7 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:subtitleTextColor="#FFFFFF"
-        app:title="Liste des Projet" />
+        app:title="Liste des mes projets" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProjet"
@@ -32,10 +32,11 @@
         android:id="@+id/btnNouveauProjet"
         style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="62dp"
         android:background="#11A375"
         android:text="Nouveau Projet"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:srcCompat="@android:drawable/ic_menu_add" />
 </LinearLayout>
