Amélioration de l'apparence du fragemement voirBillet

--- a/app/src/main/res/layout/activity_voir_billet.xml
+++ b/app/src/main/res/layout/activity_voir_billet.xml
@@ -6,6 +6,7 @@
     android:id="@+id/layout_voir_billet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundBlack"
     tools:context=".ui.activité.voirBilletActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
