--- a/app/src/main/res/layout/billet_view.xml
+++ b/app/src/main/res/layout/billet_view.xml
@@ -9,14 +9,14 @@
     <TextView
         android:id="@+id/txtTitreBillet"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="59dp"
         android:layout_weight="1"
         android:text="TextView" />
 
     <Button
         android:id="@+id/btnVoirDétail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="Button" />
+        android:text="Voir billet" />
 </LinearLayout>
