--- a/app/src/main/res/layout/fragement_creer_billet.xml
+++ b/app/src/main/res/layout/fragement_creer_billet.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundBlack"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="20dp"
-    android:gravity="center_horizontal">
+    android:padding="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +21,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/nom_Billet"
             android:inputType="textPersonName"
-            android:maxLength="20"/>
+            android:maxLength="20" />
 
         <EditText
             android:id="@+id/txtDescriptionCréeationBillet"
@@ -34,16 +36,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/btnCreerBillet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            android:paddingTop="5dp"
-            android:text="@string/créer_billet" />
+            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+            android:layout_width="match_parent"
+            android:layout_height="62dp"
+            android:background="#11A375"
+            android:text="Créer billet"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:srcCompat="@android:drawable/ic_menu_add" />
 
     </LinearLayout>
 
