rajout du swipe pour supprimer des billet

--- a/app/src/main/res/layout/billet_view.xml
+++ b/app/src/main/res/layout/billet_view.xml
@@ -2,16 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#081018"
+    android:orientation="horizontal"
+    android:visibility="visible">
 
     <TextView
         android:id="@+id/txtTitreBillet"
         android:layout_width="wrap_content"
-        android:layout_height="59dp"
-        android:layout_weight="1"
-        android:text="TextView" />
+        android:layout_height="60dp"
+        android:layout_weight="5"
+        android:background="#081018"
+        android:padding="0dp"
+        android:paddingStart="50dp"
+        android:paddingLeft="100dp"
+        android:paddingTop="100dp"
+        android:paddingBottom="50dp"
+        android:textColor="#BDA5DF"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:ignore="RtlSymmetry" />
 
     <Button
         android:id="@+id/btnVoirDétail"
@@ -19,4 +30,5 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="Voir billet" />
+
 </LinearLayout>
