--- a/app/src/main/res/layout/projet_view.xml
+++ b/app/src/main/res/layout/projet_view.xml
@@ -25,7 +25,7 @@
     <ImageButton
         android:id="@+id/btnAcceder"
         android:layout_width="93dp"
-        android:layout_height="44dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="#49544A"
         android:contentDescription="TODO"
