--- a/app/src/main/res/layout/frag_voir_desc_billet.xml
+++ b/app/src/main/res/layout/frag_voir_desc_billet.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundBlack"
     android:gravity="center_horizontal"
@@ -10,13 +12,40 @@
     <TextView
         android:id="@+id/tvTitreBillet"
         android:layout_width="match_parent"
-        android:layout_height="58dp"
-        android:text="TextView" />
+        android:layout_height="78dp"
+        android:background="@color/toolbarMauve"
+        android:gravity="center"
+        android:text="titreBillet"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="match_parent"
-        android:layout_height="242dp"
+        android:layout_height="64dp"
+        android:paddingTop="15dp"
+        android:text="@string/description_du_billet"
+        android:textAllCaps="false"
+        android:textColor="#BDA5DF"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
         android:id="@+id/tvDescBillet"
-        android:text="TextView" />
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:lineSpacingExtra="10sp"
+        android:scrollbarAlwaysDrawHorizontalTrack="false"
+        android:scrollbarAlwaysDrawVerticalTrack="false"
+        android:scrollbarStyle="outsideInset"
+        android:scrollbars="vertical"
+        android:scrollHorizontally="false"
+        android:text="descProjet"
+        android:textColor="#BDA5DF"
+        android:textIsSelectable="true"
+        android:textSize="22sp"
+        android:verticalScrollbarPosition="right"
+        app:autoSizeTextType="none" />
 
 </LinearLayout>
