--- a/app/src/main/res/layout/billet_view.xml
+++ b/app/src/main/res/layout/billet_view.xml
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#081018"
-    android:orientation="horizontal"
-    android:visibility="visible">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/txtTitreBillet"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_weight="5"
-        android:background="#081018"
-        android:padding="0dp"
-        android:paddingStart="50dp"
-        android:paddingLeft="100dp"
-        android:paddingTop="100dp"
-        android:paddingBottom="50dp"
         android:textColor="#BDA5DF"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:ignore="RtlSymmetry" />
+        android:text="@string/textview" />
 
     <Button
         android:id="@+id/btnVoirDétail"
         android:layout_width="180dp"
         android:layout_height="70dp"
         android:layout_weight="1"
-        android:text="Voir billet" />
-
+        android:maxWidth="25dp"
+        android:minWidth="25dp"
+        android:text="@string/voir_billet"
+        android:textColor="#FFFFFF" />
 </LinearLayout>
